[gd_scene load_steps=14 format=3 uid="uid://cmkfp7f7dii75"]

[ext_resource type="Script" uid="uid://bk7em2tv1v35i" path="res://main/ui/main_ui.gd" id="1_2k3m4"]
[ext_resource type="Script" uid="uid://bu3cfbf0y87bn" path="res://feature/economy/ui/rtl_demesne_stockpile.gd" id="2_46cp5"]
[ext_resource type="Script" uid="uid://d1b7k76yoctuq" path="res://feature/sim/ui/btn_progress_turn.gd" id="4_t0li6"]
[ext_resource type="Script" uid="uid://84g8vlc7ve8x" path="res://feature/sim/ui/lbl_turn_info.gd" id="5_oxwcw"]
[ext_resource type="PackedScene" uid="uid://cpi6wrt2u86aq" path="res://feature/law/ui/view_laws.tscn" id="6_l61sg"]
[ext_resource type="PackedScene" uid="uid://ddcy3mhwj4kj6" path="res://feature/economic_actor/ui/view_people_2.tscn" id="8_aklal"]
[ext_resource type="PackedScene" uid="uid://cehbj0wwgyqcm" path="res://feature/world/ui/land_view_panel.tscn" id="8_oi40j"]
[ext_resource type="PackedScene" uid="uid://dxxx" path="res://feature/economy/ui/view_economy.tscn" id="9_xxxxx"]
[ext_resource type="PackedScene" uid="uid://bxqxe2yvmqxxx" path="res://main/ui/panel_header.tscn" id="10_xxxxx"]
[ext_resource type="PackedScene" uid="uid://brt22vvn80qvj" path="res://shared/ui/notifications/notification_system.tscn" id="11_notify"]
[ext_resource type="PackedScene" uid="uid://bdmsj6dhvu586" path="res://main/ui/main_sidebar.tscn" id="12_sidebar"]

[sub_resource type="InputEventKey" id="InputEventKey_1bvp3"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_yc0ux"]
events = [SubResource("InputEventKey_1bvp3")]

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2k3m4")

[node name="CRBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.639215, 0.526713, 0.674006, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 95.0
grow_vertical = 2

[node name="GlobalSidebar" parent="HBoxContainer" instance=ExtResource("12_sidebar")]
unique_name_in_owner = true
layout_mode = 2

[node name="GlobalTopBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 96.0
offset_top = 1.0
offset_right = -300.0
offset_bottom = 51.0
grow_horizontal = 2

[node name="RTLDemesneStockpile" type="RichTextLabel" parent="GlobalTopBar"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
script = ExtResource("2_46cp5")

[node name="ViewportPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -303.0
offset_right = 550.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.08053, 0.960313)

[node name="MarginContainer" type="MarginContainer" parent="ViewportPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ViewportPanel/MarginContainer"]
layout_mode = 2

[node name="PanelHeader" parent="ViewportPanel/MarginContainer/VBoxContainer" instance=ExtResource("10_xxxxx")]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ViewportPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ViewPeople" parent="ViewportPanel/MarginContainer/VBoxContainer/ScrollContainer" instance=ExtResource("8_aklal")]
unique_name_in_owner = true
layout_mode = 2

[node name="ViewLaws" parent="ViewportPanel/MarginContainer/VBoxContainer/ScrollContainer" instance=ExtResource("6_l61sg")]
unique_name_in_owner = true
layout_mode = 2

[node name="ViewEconomy" parent="ViewportPanel/MarginContainer/VBoxContainer/ScrollContainer" instance=ExtResource("9_xxxxx")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ViewLand" parent="ViewportPanel/MarginContainer/VBoxContainer/ScrollContainer" instance=ExtResource("8_oi40j")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="TurnDisplay" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -297.0
offset_top = -719.0
offset_bottom = -679.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1, 1.28)

[node name="BtnProgressTurn" type="Button" parent="TurnDisplay"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
shortcut = SubResource("Shortcut_yc0ux")
script = ExtResource("4_t0li6")

[node name="LblTurnInfo" type="Label" parent="TurnDisplay"]
layout_mode = 2
script = ExtResource("5_oxwcw")

[node name="NotificationSystem" parent="." instance=ExtResource("11_notify")]
visible = false
layout_mode = 1
